eck/k8s/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - kibana.mino-dev.enva.gen6bk.com
      secretName: kibana-tls-secret
  rules:
    - host: kibana.mino-dev.enva.gen6bk.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana-kb-http
              servicePort: 5601
